[package]
name = "discord-goobing"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rayon = "1.10.0"
socket2 = { version = "0.5.7", features = ["all"] }
tokio-rustls = { version = "0.26.0", default-features = false,features = ["ring", "tls12"] }
hyper-rustls = { version = "0.27.2", default-features = false,features = ["ring", "http1", "native-tokio", "tls12", "logging"] }